# SplatKing2Colmap

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
src/: main.cpp  sk2cm.cpp  sk2cm.hpp
